# enrico

./: CMakeLists.txt
cht_interface/: CMakeLists.txt  chtMultiRegionFoam.C  enricoFoamLibrary.C
cht_interface/fluid/: EEqn.H  createFluidFields.H  setRegionFluidFields.H
cht_interface/solid/: createSolidFields.H  setRegionSolidFields.H  solveSolid.H
cmake/: FindOpenFOAM.cmake
include/enrico/: enricoFoamLibrary.H  foam_driver.h
src/: coupled_driver.cpp  foam_driver.cpp
tests/singlerod/short/openmc_openfoam/: Allclean  Allmesh  Allrun  README.md  enrico.xml  geometry.xml  materials.xml  settings.xml  singlerod_short_clad
tests/singlerod/short/openmc_openfoam/0.orig/clad/: T  p
tests/singlerod/short/openmc_openfoam/0.orig/fuel/: Q  T  p
tests/singlerod/short/openmc_openfoam/0.orig/gap/: Q  T  p
tests/singlerod/short/openmc_openfoam/0.orig/moderator/: T  U  alphat  epsilon  k  nut  p  p_rgh
tests/singlerod/short/openmc_openfoam/constant/: regionProperties
tests/singlerod/short/openmc_openfoam/constant/clad/: clad_boundary  thermophysicalProperties
tests/singlerod/short/openmc_openfoam/constant/clad/polyMesh/: cellZones  faceZones  faces  neighbour  owner  pointZones  points
tests/singlerod/short/openmc_openfoam/constant/clad/polyMesh/sets/: clad
tests/singlerod/short/openmc_openfoam/constant/fuel/: fuel_boundary  thermophysicalProperties
tests/singlerod/short/openmc_openfoam/constant/fuel/polyMesh/: boundary  cellZones  faceZones  neighbour  owner  pointZones  points
tests/singlerod/short/openmc_openfoam/constant/fuel/polyMesh/sets/: fuel
tests/singlerod/short/openmc_openfoam/constant/gap/: gap_boundary  thermophysicalProperties
tests/singlerod/short/openmc_openfoam/constant/gap/polyMesh/: cellZones  faceZones  neighbour  owner  pointZones  points
tests/singlerod/short/openmc_openfoam/constant/gap/polyMesh/sets/: gap
tests/singlerod/short/openmc_openfoam/constant/moderator/: g  thermophysicalProperties
tests/singlerod/short/openmc_openfoam/constant/moderator/polyMesh/: boundary  cellZones  faceZones  pointZones
tests/singlerod/short/openmc_openfoam/constant/moderator/polyMesh/sets/: moderator
tests/singlerod/short/openmc_openfoam/system/: controlDict  fvSchemes  fvSolution
tests/singlerod/short/openmc_openfoam/system/clad/: decomposeParDict
tests/singlerod/short/openmc_openfoam/system/gap/: decomposeParDict  fvSchemes  fvSolution
tests/singlerod/short/openmc_openfoam/system/moderator/: fvSolution
